<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Irish Butterflies</string>
    <string name="title_section1">Butterflies</string>
    <string name="title_section2">Butterflies I\'ve seen</string>
    <string name="title_section3">Butterflies I want to see</string>
    <string name="title_section4">Map View</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="ref_guide_title">Irish Butterflies</string>
    <string name="search_list">Search for a Butterfly</string>
    <string name="atoz">Toggle A to Z</string>
    <string name="butterflies_seen_title">Butterflies I\'ve Seen </string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_to_seen">Add to Butterflies Seen List</string>
    <string name="add_to_wishlist">Add to My Wish List</string>
    <string name="share_sighting">Share Sighting</string>
    <string name="delete_from_seen">Remove Butterfly from Seen List</string>
    <string name="delete_from_wish">Remove Butterfly from My Wish List</string>
    <string name="empty"></string>
    <string name="main_image">Profile Image</string>
    <string name="description_sub_head">Description</string>
    <string name="habitat_sub_head">Habitat</string>
    <string name="food_plant_sub_head">Food Plant</string>
    <string name="distribution_sub_head">Distribution</string>
    <string name="flight_period_sub_head">Flight Period</string>
    <string name="wingspan_sub_head">Wingspan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wishlist_title">My Wishlist</string>

    <string-array name="nav_drawer_items">
        <item>   Butterflies</item>
        <item>   Butterflies I\'ve Seen</item>
        <item>   My Wishlist</item>
        <item>    Map View</item>
        <item>   Feedback</item>
    </string-array>

    <string name="butterfly_button"></string>
    <string name="seen_button"></string>
    <string name="wish_button"></string>
    <string name="map_button"></string>
    <string name="title_activity_profile_activty">ProfileActivty</string>
    <string name="dialog_text">"Thank you for using Irish Butterflies. \n\nIf you have any positive or negative feedback, or if you have any suggestions or feature requests, please visit the Google Play Store and rate the app."</string>
    <string name="dialog_positive">Rate</string>
    <string name="dialog_negative">Not now</string>
    <string name="dialog_title">Rate Irish Butterflies</string>
    <string name="couldnt_launch_market">Problem connecting to Google Play</string>
    <string name="title_activity_butterflies">ButterfliesActivity</string>
    <string name="title_activity_slide_show">SlideShowActivity</string>

    <string name="title_template">Lorem Ipsum</string>
    <string name="lorem_ipsum"><![CDATA[Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et magna ut erat elementum cursus in quis ipsum. Nam faucibus ultrices eros, vel tempor leo semper sit amet. Duis magna quam, congue vitae interdum nec, condimentum ut lectus. Sed commodo venenatis eros a dignissim. Nunc adipiscing turpis nec magna venenatis at ultricies ipsum bibendum. Sed volutpat urna quis nisi vulputate egestas. Etiam eu dui a enim lacinia dapibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.\n\nPhasellus orci mi, eleifend nec congue id, volutpat at neque. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer semper velit vel leo rutrum sed fermentum elit porta.]]></string>

    <string name="google_maps_key">AIzaSyDjLDQlQkHfurl38lj7UQKWITSTYQbyzW4</string>
</resources>
