<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#FFFFFF" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <ImageButton
            android:id="@+id/seen_atoz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="18dp"
            android:background="#ffffff"
            android:src="@drawable/atoz" 
            android:contentDescription="@string/atoz"/>

        <EditText
            android:id="@+id/seen_input_search"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/search_list"
            android:inputType="text"
            android:paddingBottom="14dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="14dp" >

        </EditText>

    </LinearLayout>
 
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="7dp"
            android:background="@color/seen_list_bg"
            android:paddingBottom="6dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="6dp"
            android:text="@string/butterflies_seen_title"
            android:textColor="#ffffff"
            android:textSize="20sp" />
        
    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>