<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/list_item_title"
    >


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/home_logo" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="6dp">

            <Button
                android:id="@+id/butterfly_icon"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:background="@drawable/square_button_selector"
                android:layout_marginRight="3dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/butterfly_button"
                android:textSize="26sp"
                android:textColor="@color/home_toggle_text_color"/>

            <Button
                android:id="@+id/butterfly_seen_icon"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/square_button_selector"
                android:layout_marginLeft="3dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/seen_button"
                android:textSize="26sp"
                android:textColor="@color/home_toggle_text_color"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/butterfly_wish_icon"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/square_button_selector"
                android:layout_marginRight="3dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/wish_button"
                android:textSize="26sp"
                android:textColor="@color/home_toggle_text_color"/>

            <Button
                android:id="@+id/map_icon"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:background="@drawable/square_button_selector"
                android:layout_marginLeft="3dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/map_button"
                android:textSize="26sp"
                android:textColor="@color/home_toggle_text_color"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:padding="6dp"
            android:gravity="bottom|right">

        </LinearLayout>

    </LinearLayout>

</LinearLayout>